--- a/src/views/startlist.html
+++ b/src/views/startlist.html
@@ -53,7 +53,7 @@
         ⬆️ PDF
       </button>
     </div>
-    <div class="mb-4">
+    <div>
   <input type="text" id="startlistSearch" placeholder="🔍 Hledat závodníka, tým..."
     class="w-full p-2 rounded bg-gray-800 text-white placeholder-gray-400 border border-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500" />
 </div>
